Fixed some broken newsletter popup layout issue.

--- a/css-components/www/styles/contents.less
+++ b/css-components/www/styles/contents.less
@@ -2,7 +2,7 @@
 div#main-panel {
   position: absolute;
   top: 84px;
-  left: 299px;
+  left: 329px;
   bottom: 0px;
   right: 0px;
   border-left: 1px solid #222;
